--- a/praCourseWork2/.classpath
+++ b/praCourseWork2/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="StudentData.jar"/>
-	<classpathentry kind="lib" path="/Users/tahmidulislam/Desktop/JAVA API&apos;S/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="/Users/tahmidulislam/Desktop/JAVA API&apos;S/jfreechart-1.0.19-experimental.jar"/>
-	<classpathentry kind="lib" path="/Users/tahmidulislam/Desktop/JAVA API&apos;S/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="/Users/tahmidulislam/Desktop/JAVA API&apos;S/mail.jar"/>
+	<classpathentry kind="var" path="PRA_API/jcommon-1.0.23.jar"/>
+	<classpathentry kind="var" path="PRA_API/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="var" path="PRA_API/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="var" path="PRA_API/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
