--- a/praCourseWork2/.classpath
+++ b/praCourseWork2/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="StudentData.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Lenovo/Downloads/itext-5.5.5/itextpdf-5.5.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Lenovo/Desktop/JARs/mail.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Lenovo/Desktop/JARs/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Lenovo/Desktop/JARs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Lenovo/Desktop/JARs/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="var" path="PRAAPI/itextpdf-5.5.5.jar"/>
+	<classpathentry kind="var" path="PRAAPI/jcommon-1.0.23.jar"/>
+	<classpathentry kind="var" path="PRAAPI/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="var" path="PRAAPI/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="var" path="PRAAPI/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
