Now reads and writes the settings file from the current directory, instead of the user's documents or desktop directory

--- a/praCourseWork2/bin/.gitignore
+++ b/praCourseWork2/bin/.gitignore
@@ -1,7 +1,8 @@
-/email/
-/main/
-/data/
-/graph/
-/extraFeatures/
 /KEATSScraper/
+/Lock-Icon.png
+/data/
+/email/
+/extraFeatures/
+/graph/
+/main/
 /student/
