- CHanged GraphListener so that it only executes the code when an ExamFile has been loaded - Changed the FindSettingsFile and writeSettings method in Settings class. NEEDS TESTING

--- a/praCourseWork2/bin/.gitignore
+++ b/praCourseWork2/bin/.gitignore
@@ -1,13 +1,7 @@
-<<<<<<< Updated upstream
-/student/
 /data/
-/main/
 /email/
 /extraFeatures/
 /graph/
 /KEATSScraper/
-=======
-/login.txt
-/extraFeatures/
 /main/
->>>>>>> Stashed changes
+/settings.ini
