Fixed bug that prevents login.txt from being found within project folder.

--- a/praCourseWork2/bin/.gitignore
+++ b/praCourseWork2/bin/.gitignore
@@ -1,7 +1,10 @@
+/KEATSScraper/
+/Lock-Icon.png
 /data/
 /email/
 /extraFeatures/
 /graph/
-/KEATSScraper/
+/login.txt
 /main/
 /settings.ini
+/student/
