(GROUP WORK) Small changes again.

--- a/praCourseWork2/bin/.gitignore
+++ b/praCourseWork2/bin/.gitignore
@@ -1,4 +1,9 @@
-/main/
-/MainApp.class
+/KEATSScraper/
+/Lock-Icon.png
+/data/
+/email/
 /extraFeatures/
+/graph/
+/login.txt
 /mainFrame/
+/student/
