--- a/praCourseWork2/.classpath
+++ b/praCourseWork2/.classpath
@@ -4,10 +4,10 @@
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="StudentData.jar"/>
-	<classpathentry kind="var" path="PRAAPI/itextpdf-5.5.5.jar"/>
-	<classpathentry kind="var" path="PRAAPI/jcommon-1.0.23.jar"/>
-	<classpathentry kind="var" path="PRAAPI/jfreechart-1.0.19-experimental.jar"/>
-	<classpathentry kind="var" path="PRAAPI/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="var" path="PRAAPI/mail.jar"/>
+	<classpathentry kind="var" path="External_API/itextpdf-5.5.5.jar"/>
+	<classpathentry kind="var" path="External_API/jcommon-1.0.23.jar"/>
+	<classpathentry kind="var" path="External_API/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="var" path="External_API/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="var" path="External_API/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
